k8s-backup/deployments.apps_ws.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "4"
    creationTimestamp: "2024-08-11T14:20:30Z"
    generation: 5
    name: websocket-deployment
    namespace: ws
    resourceVersion: "3915381679"
    uid: 9e0e17f5-4d54-4a68-bd7f-c09fe5ddfc05
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: websocket
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: websocket
      spec:
        containers:
        - command:
          - /data/ws-server/ws-server
          - -c
          - /config/app.cluster.ini
          image: registry-vpc.cn-shenzhen.aliyuncs.com/morpingsss/ws-server-amd64:1.1.0
          imagePullPolicy: IfNotPresent
          name: websocket-container
          ports:
          - containerPort: 6000
            protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: config-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: websocket-config
          name: config-volume
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2024-08-16T18:45:24Z"
      lastUpdateTime: "2024-08-16T18:45:24Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2024-08-11T14:20:30Z"
      lastUpdateTime: "2024-08-20T01:12:52Z"
      message: ReplicaSet "websocket-deployment-5c757775f9" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 5
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
